@@ -194,12 +194,24 @@ class SysUtility
      *
      * @return bool
      */
-    public function fieldExists($fieldname, $table)
+    public static function fieldExists($fieldname, $table)
     {
         global $xoopsDB;
         $result = $xoopsDB->queryF("SHOW COLUMNS FROM   $table LIKE '$fieldname'");
 
         return ($xoopsDB->getRowsNum($result) > 0);
+    }
+
+    /**
+     * @param string $tablename
+     *
+     * @return bool
+     */
+    public static function tableExists($tablename)
+    {
+        $result = $GLOBALS['xoopsDB']->queryF("SHOW TABLES LIKE '$tablename'");
+
+        return ($GLOBALS['xoopsDB']->getRowsNum($result) > 0) ? true : false;
     }
 
     /**
@@ -225,5 +237,40 @@ class SysUtility
             $new_id = $GLOBALS['xoopsDB']->getInsertId();
         }
         return $new_id;
+    }
+
+    /**
+     * Add a field to a mysql table
+     *
+     * @param $field
+     * @param $table
+     * @return bool|\mysqli_result
+     * @package       News
+     * @author        Hervé Thouzard (http://www.herve-thouzard.com)
+     * @copyright (c) Hervé Thouzard
+     */
+    public function addField($field, $table)
+    {
+        global $xoopsDB;
+        $result = $xoopsDB->queryF('ALTER TABLE ' . $table . " ADD $field");
+
+        return $result;
+    }
+
+    /**
+     * Function responsible for checking if a directory exists, we can also write in and create an index.html file
+     *
+     * @param string $folder Le chemin complet du répertoire à vérifier
+     */
+    public static function prepareFolder($folder)
+    {
+        try {
+            if (!@\mkdir($folder) && !\is_dir($folder)) {
+                throw new \RuntimeException(\sprintf('Unable to create the %s directory', $folder));
+            }
+            file_put_contents($folder . '/index.html', '<script>history.go(-1);</script>');
+        } catch (\Exception $e) {
+            echo 'Caught exception: ', $e->getMessage(), "\n", '<br>';
+        }
     }
 }
