@@ -15,8 +15,8 @@ $moduleDirName = basename(__DIR__);
 
 $modversion = [
     'version'             => 5.01,
-    'module_status'       => 'Beta 3',
-    'release_date'        => '2021/02/14',
+    'module_status'       => 'Beta 4',
+    'release_date'        => '2021/02/19',
     'name'                => _MI_NEWBB_NAME,
     'description'         => _MI_NEWBB_DESC,
     'help'                => 'page=help',
