@@ -1,3 +1,6 @@
+<h5>5.01 Beta 4 [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.2
+<hr>
+
 <h5>5.01 Beta 3 [2021-02-14]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.2
 <hr>
 - 'isset' replaced with coalesce (mamba)
